<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.familyfunctional.whorepresentsme.MainActivity">

    <TextView
        android:id="@+id/header_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:text="@string/find_congress_members"
        android:textSize="22sp"
        android:layout_marginTop="20dp"
        />

    <Button
        android:id="@+id/btn_use_my_location"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_below="@id/header_title"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="16dp"
        android:drawablePadding="6dp"
        android:text="@string/use_my_location"
        android:onClick="onUseGPSLocationClick"
        android:drawableRight="@drawable/ic_my_location_black_24dp"
        />


    <TextView
        android:id="@+id/or_text"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="32dp"
        android:layout_below="@id/btn_use_my_location"
        android:textSize="18sp"
        android:gravity="center"
        android:text="@string/or"
        />

    <EditText
        android:id="@+id/zip_code"
        android:layout_marginTop="16dp"
        android:layout_width="72dp"
        android:layout_height="48dp"
        android:layout_below="@id/or_text"
        android:layout_centerHorizontal="true"
        android:gravity="center"
        android:inputType="number"
        android:maxLength="5"
        android:imeOptions="actionDone"
        android:hint="@string/zip_hint"
        tools:text="90210"
        />

    <Button
        android:id="@+id/btn_use_another_location"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_below="@id/zip_code"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="16dp"
        android:text="@string/use_another_location"
        android:onClick="onUseTextLocationClick"
        />

    <android.support.design.widget.CoordinatorLayout
        android:id="@+id/snackbarCoordinatorLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"/>

</RelativeLayout>
